syntax = "proto3";

package tobmapapi;

service RouteService {
    rpc Route(RouteRequest) returns (RouteResponse) {}
}

message LatLng {
    double lat = 1;
    double lng = 2;
}

message RouteRequest {
  LatLng start = 1;
  LatLng end = 2;
}

message Png {
    bytes bytes = 1;
}

message RouteResponse {
    Png png = 1;
}
